Sync minor fixes to DAO